--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   salomon_bottom_bar: ^3.3.2
   flutter_svg: ^2.2.0
   url_launcher: ^6.3.1
+  fl_chart: ^1.0.0
+  flutter_spinkit: ^5.2.1
 
 
 dev_dependencies:
@@ -87,6 +89,14 @@ flutter:
     - family: Agbalumo 
       fonts:
         - asset: fonts/Agbalumo-Regular.ttf
+
+    - family: Audiowide
+      fonts:
+        - asset: fonts/Audiowide-Regular.ttf
+
+    - family: Monoton
+      fonts:
+        - asset: fonts/Monoton-Regular.ttf
 
   #
   # For details regarding fonts from package dependencies,
