--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,9 @@ dependencies:
   flutter_svg: ^2.2.0
   url_launcher: ^6.3.1
   fl_chart: ^1.0.0
-  flutter_spinkit: ^5.2.1
+  flutter_spinkit: ^5.2.1 
+  flutter_local_notifications: ^19.2.1  
+  shared_preferences: ^2.5.3
 
 
 dev_dependencies:
