--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_spinkit: ^5.2.1 
   flutter_local_notifications: ^19.2.1  
   shared_preferences: ^2.5.3
+  http: ^1.5.0
 
 
 dev_dependencies:
